# launcher

./: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: generate_icons.sh  register_protocol_macos.sh  test_deep_link.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  relic.conf  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  environment.rs  file_utils.rs  lib.rs  main.rs
src/app/: analytics.tsx  fonts.ts  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/app/components/: AuthButton.tsx  BodyBackground.tsx  ClaudeButton.tsx  ConditionalHeader.tsx  Footer.tsx  InstallButton.tsx  InstallMcp.tsx  Navigation.tsx  OnboardingScreen.tsx  ProviderCard.tsx  ProviderIcon.tsx
src/app/components/magicui/: text-animate.tsx
src/app/components/ui/: button.tsx  dialog.tsx  drag-region.tsx
src/app/hooks/: useAuth.ts
src/app/lib/: auth-service.ts
src/app/lib/utils/: get-request-origin.ts  onboarding.ts  track-event.ts
src/app/settings/: page.tsx
src/docs/: deep-link-debugging.md  oauth-integration.md
